--- a/bernard/templates/bernard/vehicle.html
+++ b/bernard/templates/bernard/vehicle.html
@@ -20,20 +20,21 @@
         <div class="row">
             <div class="col-md-8">
             <h4 class="h4 mb-0">{{ vehicle.ref_id }}</h4>
-            <div class="text-muted">Ford white van INFOHERE</div>
+            <div class="text-muted">{{ vehicle.info }}</div>
             </div>
 
+            <!--
             <div class="col-md-4">
             <div class="d-flex flex-row-reverse">
                 <button class="btn btn-outline-secondary">Edit</button>
             </div>
             </div>
+            -->
 
         </div>
 
         <hr class="mt-2 mb-4">
 
-        <h5 class="h5">Pending notifications</h5>
     </div>
 
     <div class="col-md-6">
