--- a/bernard/static/bernard/css/bootstrap-datetimepicker.css
+++ b/bernard/static/bernard/css/bootstrap-datetimepicker.css
@@ -83,7 +83,6 @@
 .bootstrap-datetimepicker-widget .timepicker-minute,
 .bootstrap-datetimepicker-widget .timepicker-second {
   width: 54px;
-  font-weight: bold;
   font-size: 1.2em;
   margin: 0;
 }
@@ -309,7 +308,7 @@
 }
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-  background-color: #337ab7;
+  background-color: #007bff;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
@@ -335,7 +334,7 @@
   background: #eeeeee;
 }
 .bootstrap-datetimepicker-widget table td span.active {
-  background-color: #337ab7;
+  background-color: #007bff;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
