--- a/bernard/templates/bernard/overview.html
+++ b/bernard/templates/bernard/overview.html
@@ -7,7 +7,7 @@
 <div class="container">
 <div class="row">
 
-<div class="col-md-4">
+<div class="col-md-6 mb-4">
 
 <div class="card">
     <div class="card-body">
@@ -19,7 +19,7 @@
 </div>
 
 </div>
-<div class="col-md-4">
+<div class="col-md-6">
 
 <div class="card">
     <div class="card-body">
@@ -31,7 +31,10 @@
 </div>
 
 </div>
-<div class="col-md-4">
+</div>
+<div class="row">
+
+<div class="col-md-6 mb-4">
 
 <div class="card">
     <div class="card-body">
