--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-md-4 offset-md-0">
         <div class="d-flex flex-row-reverse">
-        <button class="btn btn-outline-primary">Add</button>
+            <a href="{% url 'vehicle_new' %}" class="btn btn-outline-primary">Add</a>
         </div>
     </div>
 </div>
