Implement notification mgmt

--- a/bernard/templates/bernard/notification.html
+++ b/bernard/templates/bernard/notification.html
@@ -13,8 +13,8 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h4 class="h4 mb-0">Notifications</h4>
-        <div class="text-muted">Notifications that pending or still valid</div>
+        <h4 class="h4 mb-0">Notification</h4>
+        <div class="text-muted">Status: {{ notification.status }}</div>
         </div>
     </div>
 </div>
@@ -23,14 +23,6 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form>
-            <div class="form-group">
-                <label for="ref_id">Reference ID</label>
-                <input type="text" class="form-control" id="ref_id" name="ref_id" aria-describedby="ref_id_help">
-                <small id="ref_id_help" class="form-text text-muted">Lorem ipsum</small>
-            </div>
-
-        </form>
     </div>
 </div>
 
