--- a/bernard/templates/bernard/notifications.html
+++ b/bernard/templates/bernard/notifications.html
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-8">
         <h4 class="h4 mb-0">Notifications</h4>
-        <div class="text-muted">Notifications that pending or still valid</div>
+        <div class="text-muted">Notifications sent out or waiting to trigger</div>
     </div>
     <div class="col-md-4 offset-md-0">
         <div class="d-flex flex-row-reverse">
@@ -27,6 +27,15 @@
 
 <div class="row">
     <div class="col-md-12">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+
+
         {% if notifications %}
         <ul class="list-unstyled">
         {% for notification in notifications %}
