--- a/bernard/templates/bernard/overview.html
+++ b/bernard/templates/bernard/overview.html
@@ -11,8 +11,8 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Notifications</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <h5 class="card-title">5</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Notifications</h6>
         <p class="card-text">Notifications pending or still valid</p>
         <a href="{% url 'notifications' %}" class="card-link">All notifications</a>
     </div>
@@ -23,8 +23,8 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Vehicles</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <h5 class="card-title">2</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Vehicles</h6>
         <p class="card-text">Vehicles registered to this organisation</p>
         <a href="{% url 'vehicles' %}" class="card-link">All vehicles</a>
     </div>
@@ -38,8 +38,8 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Tokens</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <h5 class="card-title">1</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Tokens</h6>
         <p class="card-text">Tokens are required to make calls to the REST API</p>
         <a href="{% url 'tokens' %}" class="card-link">All tokens</a>
     </div>
