--- a/bernard/templates/bernard/notification.html
+++ b/bernard/templates/bernard/notification.html
@@ -12,9 +12,18 @@
 <div class="col-md-6">
 
 <div class="row">
-    <div class="col-md-8">
-        <h4 class="h4 mb-0">Notification</h4>
-        <div class="text-muted">Status: {{ notification.status }}</div>
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-8">
+            <h4 class="h4 mb-0">Notification</h4>
+            <div class="text-muted">Status: {{ notification.status }}</div>
+            </div>
+
+            <div class="col-md-4">
+            <div class="d-flex flex-row-reverse">
+                <button class="btn btn-outline-danger">Cancel</button>
+            </div>
+            </div>
         </div>
     </div>
 </div>
