--- a/bernard/templates/bernard/overview.html
+++ b/bernard/templates/bernard/overview.html
@@ -11,9 +11,9 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">5</h5>
+        <h5 class="card-title">{{ notif_count }}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Notifications</h6>
-        <p class="card-text">Notifications pending or still valid</p>
+        <p class="card-text">Pending notifications</p>
         <a href="{% url 'notifications' %}" class="card-link">All notifications</a>
     </div>
 </div>
@@ -23,7 +23,7 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">2</h5>
+        <h5 class="card-title">{{ vhcl_count }}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Vehicles</h6>
         <p class="card-text">Vehicles registered to this organisation</p>
         <a href="{% url 'vehicles' %}" class="card-link">All vehicles</a>
@@ -38,7 +38,7 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">1</h5>
+        <h5 class="card-title">{{ token_count }}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Tokens</h6>
         <p class="card-text">Tokens are required to make calls to the REST API</p>
         <a href="{% url 'tokens' %}" class="card-link">All tokens</a>
