--- a/bernard/templates/bernard/notification.html
+++ b/bernard/templates/bernard/notification.html
@@ -14,14 +14,18 @@
 <div class="row">
     <div class="col-md-12">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
             <h4 class="h4 mb-0">Notification</h4>
             <div class="text-muted">Status: {{ notification.status }}</div>
             </div>
 
-            <div class="col-md-4">
-            <div class="d-flex flex-row-reverse">
-                <button class="btn btn-outline-danger">Cancel</button>
+            <div class="col-md-6">
+
+            <div class="d-flex justify-content-end">
+                {% if notification.status == 'PENDING' %}
+                <button class="btn btn-outline-success ml-2">Trigger now</button>
+                <button class="btn btn-outline-danger ml-2">Cancel</button>
+                {% endif %}
             </div>
             </div>
         </div>
