--- a/bernard/templates/bernard/login.html
+++ b/bernard/templates/bernard/login.html
@@ -14,7 +14,7 @@
 <body class="text-center bg-light">
     <div class="signin">
         <form class="form-signin" action="/login/" method="post">
-            <h1 class="h3 mb-3 font-weight-normal">Levfinder</h1>
+            <img class="login-logo mb-3" src="{% static "bernard/logo_black.png" %}" >
 
             {% csrf_token %}
 
