--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -19,7 +19,9 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/">Levfinder</a>
+        <a class="navbar-brand" href="/">
+            <img class="navbar-logo" src="{% static "bernard/logo_white.png" %}">
+        </a>
 
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -76,12 +78,14 @@
                                 Vehicles
                             </a>
                         </li>
+                        <!--
                         <li class="nav-item">
                             <a class="nav-link {% block nav-tokens %}{% endblock %}" href="{% url 'tokens' %}">
                                 <span class="fas fa-key fa-fw"></span>
                                 Tokens
                             </a>
                         </li>
+                        -->
                     </ul>
                 </div>
             </nav>
