--- a/bernard/templates/bernard/notification_new.html
+++ b/bernard/templates/bernard/notification_new.html
@@ -68,7 +68,7 @@
 
             <div class="form-group">
                 <label for="phone">Phone</label>
-                <input type="text" class="form-control-sm form-control" id="phone" name="phone" aria-describedby="phone_help" required>
+                <input type="tel" class="form-control-sm form-control" id="phone" name="phone" aria-describedby="phone_help" required>
                 <small id="phone_help" class="form-text text-muted">Phone number where SMS with tracking link will be sent</small>
             </div>
 
