--- a/bernard/templates/bernard/notifications.html
+++ b/bernard/templates/bernard/notifications.html
@@ -11,7 +11,7 @@
 <div class="row">
 <div class="col-md-6">
 
-<div class="row">
+<div class="row mb-2">
     <div class="col-md-8">
         <h4 class="h4 mb-0">Notifications</h4>
         <div class="text-muted">Notifications sent out or waiting to trigger</div>
@@ -23,25 +23,21 @@
     </div>
 </div>
 
-<hr class="my-2">
-
 <div class="row">
     <div class="col-md-12">
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}" role="alert">
-            {{ message }}
-        </div>
-        {% endfor %}
-        {% endif %}
-
-
         {% if notifications %}
-        <ul class="list-unstyled">
-        {% for notification in notifications %}
-        <li><a href="/notifications/{{ notification.id }}"><span class="text-monospace">{{ notification.ref_id }}</span></a> {{ notification.vendor.name }}</li>
+        <table class="table table-hover">
+            <tbody>
+            {% for notification in notifications %}
+            <tr>
+                <td><a href="/notifications/{{ notification.id }}"><span class="text-monospace">{{ notification.ref_id }}</span></a></td>
+                <td>
+                    {{ notification.status }}
+                </td>
+            </tr>
         {% endfor %}
-        </ul>
+            </tbody>
+        </table>
         {% endif %}
     </div>
 </div>
