Fix seed script

--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -16,7 +16,9 @@
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <div class="navbar-item">
-          <a href="/">Levfinder</a>
+          <a href="/">
+            <h1 class="title is-4 has-text-white">Levfinder</h1>
+          </a>
         </div>
       </div>
 
