Add settings views and make map fill height

--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Levfinder Dashboard</title>
+    <title>{% block title %}Dashboard{% endblock %}</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
 
@@ -25,17 +25,19 @@
       <div class="navbar-menu">
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link" href="#">Drivers</a>
+              <a class="navbar-link {% block nav-drivers %}{% endblock %}" href="{% url 'drivers' %}">Drivers</a>
             <div class="navbar-dropdown">
               <a class="navbar-item">Add</a>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link" href="#">Stops</a>
+              <a class="navbar-link {% block nav-stops %}{% endblock %}" href="{% url 'stops' %}">Stops</a>
             <div class="navbar-dropdown">
               <a class="navbar-item">Add</a>
             </div>
           </div>
+
+          <a class="navbar-item {% block nav-route %}{% endblock %}" href="#">Route</a>
         </div>
 
         <div class="navbar-end">
@@ -48,6 +50,11 @@
               <a class="navbar-item">Svenska</a>
             </div>
           </div>
+          <a class="navbar-item" href="{% url 'settings' %}">
+            <span class="icon">
+              <i class="fas fa-cog"></i>
+            </span>
+          </a>
           <div class="navbar-item">
             <div class="buttons">
               <a class="button is-light" href="{% url 'logout' %}">Logout</a>
