--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Levfinder Login</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -17,6 +17,11 @@
         <div class="column is-two-fifths">
           <h1 class="title">Levfinder</h1>
           <p class="subtitle">Log in to dashboard</p>
+            {% if not prod %}
+            <div class="notification is-danger">
+              This is experimental code. Expect things to spontaneously catch fire and explode.
+            </div>
+            {% endif %}
           <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <div class="field">
