--- a/bernard/templates/dashboard/settings_account.html
+++ b/bernard/templates/dashboard/settings_account.html
@@ -7,21 +7,50 @@
   <div class="field">
     <label class="label">Username</label>
     <div class="control">
-      <input class="input" type="text" value="{{ username }}">
+      <input class="input" type="text" value="{{ user.username }}" autocomplete="off" disabled>
     </div>
   </div>
 
   <div class="field">
     <label class="label">Email</label>
     <div class="control">
-      <input class="input" type="email" value="{{ email }}">
+      <input class="input" type="email" value="{{ user.email }}" autocomplete="off">
     </div>
   </div>
 
   <div class="field">
-    <label class="label">Password</label>
+    <label class="label">Old password</label>
     <div class="control">
-      <input class="input" type="password" value="{{ password }}">
+      <input class="input" name="password" type="password">
+    </div>
+  </div>
+
+  <div class="columns">
+  <div class="column">
+
+  <div class="field">
+    <label class="label">New password</label>
+    <div class="control">
+      <input class="input" name="new_password" type="password" value="{{ password }}" autocomplete="off">
+    </div>
+  </div>
+
+  </div>
+  <div class="column">
+
+  <div class="field">
+    <label class="label">Confirm new password</label>
+    <div class="control">
+      <input class="input" name="new_password_confirm" type="password" value="{{ password }}" autocomplete="off">
+    </div>
+  </div>
+
+  </div>
+  </div>
+
+  <div class="field">
+    <div class="control">
+      <input class="button is-primary" type="submit" value="Save">
     </div>
   </div>
 </form>
