--- a/bernard/templates/dashboard/drivers.html
+++ b/bernard/templates/dashboard/drivers.html
@@ -11,7 +11,7 @@
     <article class="media">
       <div class="media-content">
         <div class="content">
-          <p><strong>{{ driver.name }}</strong> <small>{{ driver.start_address }}</small></p>
+          <p><strong>{{ driver.name }}</strong><br/><small>{{ driver.start_address }}</small></p>
         </div>
       </div>
       <nav class="level">
@@ -48,6 +48,6 @@ function initMap() {
 }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUbOT9j-li5pxGSJYIFnjC_lnjxQdjxCI&callback=initMap" async defer></script> 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUbOT9j-li5pxGSJYIFnjC_lnjxQdjxCI&callback=initMap" async defer></script>
 
 {% endblock %}
