--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -7,6 +7,8 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
 
@@ -17,11 +19,16 @@
         <div class="column is-two-fifths">
           <a href="https://levfinder.se"><h1 class="title">Levfinder</h1></a>
           <p class="subtitle">Log in to dashboard</p>
-            {% if not is_prod %}
-            <div class="notification is-danger">
-              You are logging in to a development server. Expect things to spontaneously catch fire and explode.
-            </div>
-            {% endif %}
+          {% if not is_prod %}
+          <div class="notification is-warning">
+            You are logging in to a development server. Expect things to spontaneously catch fire and explode
+          </div>
+          {% endif %}
+          {% for message in messages %}
+          <div class="notification is-danger">
+            {{ message }}
+          </div>
+          {% endfor %}
           <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <div class="field">
