--- a/bernard/templates/dashboard/settings_api.html
+++ b/bernard/templates/dashboard/settings_api.html
@@ -3,5 +3,5 @@
 {% block menu_api %}is-active{% endblock %}
 
 {% block settings_main %}
-Lorem ipsum
+This isn't implemented yet, check back later
 {% endblock %}
