--- a/bernard/templates/dashboard/login.html
+++ b/bernard/templates/dashboard/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Login</title>
+    <title>Log in</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -25,7 +25,7 @@
           </div>
           {% endif %}
           {% for message in messages %}
-          <div class="notification is-danger">
+          <div class="notification is-{{ message.tags }}">
             {{ message }}
           </div>
           {% endfor %}
@@ -49,7 +49,7 @@
             </div>
             <div class="field">
               <div class="control">
-                <input type="submit" class="button is-success" value="Login">
+                <input type="submit" class="button is-success" value="Log in">
               </div>
             </div>
           </form>
