--- a/bernard/templates/dashboard/drivers.html
+++ b/bernard/templates/dashboard/drivers.html
@@ -19,11 +19,15 @@
         </div>
         <div class="level-right">
           <div class="level-item">
-            <a href="#">
-            <span class="icon">
-              <i class="fas fa-trash"></i>
-            </span>
-            </a>
+            <form action="{% url 'driver' driver.id %}" method="post">
+              {% csrf_token %}
+              <input type="hidden" name="_method" value="DELETE">
+              <button class="button" type="submit">
+                <span class="icon">
+                  <i class="fas fa-trash"></i>
+                </span>
+              </button>
+            </form>
           </div>
         </div>
       </nav>
