Display computed route

--- a/bernard/templates/dashboard/route.html
+++ b/bernard/templates/dashboard/route.html
@@ -7,6 +7,23 @@
 <div class="columns is-gapless" style="height: calc(100vh - 3.25rem);">
   <div class="column is-one-thirds media-items">
     <div class="section">
+      <div class="timeline">
+        <header class="timeline-header">
+          <span class="tag">Start</span>
+        </header>
+
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <p class="heading">AABBCC2123</p>
+            <p>Loremipsumgatan 42, Göteborg</p>
+          </div>
+        </div>
+
+        <header class="timeline-header">
+          <span class="tag">End</span>
+        </header>
+      </div>
     </div>
   </div>
 
