--- a/bernard/templates/dashboard/settings.html
+++ b/bernard/templates/dashboard/settings.html
@@ -11,7 +11,10 @@
           <p class="menu-label">General</p>
           <ul class="menu-list">
             <li><a class="{% block menu_account %}{% endblock %}" href="{% url 'settings_account' %}">Account</a></li>
+            <li><a class="" href="#">Organisation</a></li>
+            <li><a class="" href="#">Billing</a></li>
           </ul>
+
           <p class="menu-label">Development</p>
           <ul class="menu-list">
             <li><a class="{% block menu_api %}{% endblock %}" href="{% url 'settings_api' %}">API keys</a></li>
