--- a/bernard/templates/dashboard/base.html
+++ b/bernard/templates/dashboard/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.1/css/flag-icon.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
     <link rel="stylesheet" href="{% static 'dashboard/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/bulma-timeline.min.css' %}">
 
     <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -60,7 +61,7 @@
           </a>
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" href="{% url 'logout' %}">Logout</a>
+              <a class="button is-light" href="{% url 'logout' %}">Log out</a>
             </div>
           </div>
         </div>
