Add routing algorithm

--- a/bernard/templates/dashboard/drivers.html
+++ b/bernard/templates/dashboard/drivers.html
@@ -52,6 +52,6 @@ function initMap() {
 }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUbOT9j-li5pxGSJYIFnjC_lnjxQdjxCI&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ googlemaps_key }}&callback=initMap" async defer></script>
 
 {% endblock %}
